create test frontend for service